--- a/Homeworks/Task 14/Dao/pom.xml
+++ b/Homeworks/Task 14/Dao/pom.xml
@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.company</groupId>
-    <artifactId>jdbk-humanAndAuto</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>Dao</artifactId>
+    <version>1.0</version>
+
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
@@ -15,12 +16,14 @@
             <artifactId>postgresql</artifactId>
             <version>42.1.4</version>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
             <version>4.3.12.RELEASE</version>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok-maven -->
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
@@ -29,6 +32,7 @@
             <version>1.16.18</version>
             <scope>provided</scope>
         </dependency>
+
     </dependencies>
 
     <build>
